<resources>
    <string name="app_name">Most Popular Tv Shows</string>

    <string name="error_empty_view_title">Something went wrong</string>
    <string name="error_empty_view_description">Oh no! The most popular shows cannot be fetch!</string>
    <string name="no_elements_empty_view_title">Most popular tv shows</string>
    <string name="no_elements_empty_view_description">Here will appear the most popular tv shows</string>
    <string name="transition_string">shareTransition</string>
    <string name="tv_show_detail_error">Something went wrong</string>
    <string name="rating">Rating:</string>
    <string name="see_more">See more</string>
    <string name="overview">Overview</string>
    <string name="rating_title">Rating</string>
    <string name="similar_shows">Similar Shows</string>
    <string name="more">More</string>
    <string name="most_popular_tv_shows_title">Most Popular Tv Shows</string>
    <string name="similar_to">Similar to</string>

</resources>
