...
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/similarTvShowListContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:elevation="3dp"
            android:orientation="vertical"
...
